Tests: Update swagger annotations #2132
